# buaa_light_robot

./: README.md
src/buaa_rescue_robot_gui/: CMakeLists.txt
src/buaa_rescue_robot_gui/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/buaa_rescue_robot_msgs/: CMakeLists.txt
src/buaa_rescue_robot_msgs/launch/: control_by_keyboard.launch.py
src/buaa_rescue_robot_msgs/msg/: SensorsMessageRobomaster.msg
src/controller/: CMakeLists.txt
src/controller/src/: auto_controller_1.cpp
src/omega7_sensor/: CMakeLists.txt  launch_with_display.sh
src/omega7_sensor/src/: omega7_sensor.cpp
src/serial/: CMakeLists.txt  README.md
src/serial/src/: serial_robomaster_1.cpp
